tests/neg-custom-args/captures/dcs-tvar.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/dcs-tvar.scala:6:2 ---------------------------------------
6 |  () => runOps(xs) // error
  |  ^^^^^^^^^^^^^^^^
  |  Found:    () => Unit
  |  Required: () -> Unit
  |  Note that capability xs* is not included in capture set {}.
  |
  |  where:    => refers to a fresh root capability in the type of type T
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/dcs-tvar.scala:9:2 ---------------------------------------
9 |  () => runOps(xs) // error
  |  ^^^^^^^^^^^^^^^^
  |  Found:    () => Unit
  |  Required: () -> Unit
  |  Note that capability xs* is not included in capture set {}.
  |
  |  where:    => refers to a fresh root capability in the type of type U
  |
  | longer explanation available when compiling with `-explain`
